# MarkdownDRY

./: .gitignore  pyproject.toml  readme.md
core/: RegexStorage.py  core_html.py  core_lang.py  core_markdown.py  core_markdown_dry.py  core_parsing.py  helpful.py  types.py
core/test/: test_CoreMarkdown.py  test_CoreMarkdownDRY.py  test_Parsing.py
core/test/dataset/dev/in/: Hr.md  LinkCode.md  LinkCode.py  LinkCode2.py  Вставить кода из файл 1.py  Вставить кода из файла.md  Выделение блоков.md  Многостраничные кодблоки.md  Многострочные таблицы.md  Скрываемые заголовки.md  Ссылки на структурные элементы кода.md  Ссылочный блок init.md  Фото галерея.md
core/test/dataset/in/: HeaderMain.md  LinkCode.md  LinkCode.py  LinkCode2.py  LinkCode3.md  LinkCode4  Ol.md  Ol_and_Ul.md  Ul.md  test_LinkCode_NET_GitGist.md  ВложенныеПеременные.md  Вставить кода из файл 2.py  Математический Размах.md  Полноценный пример 1.md  Раскрываемые блок.md  Ссылочный блок использование.md  Якорь.py
core/test/dataset/pub/: ParsingToHtml.html  Полноценный пример 1.1.html  Полноценный пример 1.md
core/test/dataset/pub/in/: Br.md  DropdownBlock.md  HeaderMain.md  HighlightBlock.md  IndisputableInsertCodeFromFile.md  InsertCodeFromFile.md  LinkCode.md  LinkCode_NET_GitGist.md  MathSpan.md  MathSpan_Simpl.md  MathSpan_Upgrade.md  MultiLineTables.md  MultiPageCode.md  MultilineTables.md  PhotoGallery.md  Vars.md  (+2 more)
www/css/: main.min.css  main.scss  plugin.css  style.min.css
www/css/мусор/: asm_html.py  logic.js  style.css  style.scss  template.html  test.html  test_2.html  test_res.html
(+4 files in other folders)
